Added demos for: ARK (ARK), Byteball (GBYTE), Bytom (BTM), Cardano (ADA), QTUM (QTUM), SALT (SALT), ZCoin (XZC)

--- a/demo.html
+++ b/demo.html
@@ -25,6 +25,8 @@
 
    <div class="icons">
       <h2>A</h2>
+      <i class="cc ADA" title="ADA"></i>
+      <i class="cc ADA-alt" title="ADA"></i>
       <i class="cc ADC" title="ADC"></i>
       <i class="cc ADC-alt" title="ADC"></i>
       <i class="cc AEON" title="AEON"></i>
@@ -37,6 +39,8 @@
       <i class="cc ARCH-alt" title="ARCH"></i>
       <i class="cc ARDR" title="ARDR"></i>
       <i class="cc ARDR-alt" title="ARDR"></i>
+      <i class="cc ARK" title="ARK"></i>
+      <i class="cc ARK-alt" title="ARK"></i>
       <i class="cc AUR" title="AUR"></i>
       <i class="cc AUR-alt" title="AUR"></i>
 
@@ -66,6 +70,8 @@
       <i class="cc BCC-alt" title="BCC"></i>
       <i class="cc BTCD" title="BTCD"></i>
       <i class="cc BTCD-alt" title="BTCD"></i>
+      <i class="cc BTM" title="BTM"></i>
+      <i class="cc BTM-alt" title="BTM"></i>
       <i class="cc BTS" title="BTS"></i>
       <i class="cc BTS-alt" title="BTS"></i>
 
@@ -120,6 +126,8 @@
       <h2>G</h2>
       <i class="cc GAME" title="GAME"></i>
       <i class="cc GAME-alt" title="GAME"></i>
+      <i class="cc GBYTE" title="GBYTE"></i>
+      <i class="cc GBYTE-alt" title="GBYTE"></i>
       <i class="cc GDC" title="GDC"></i>
       <i class="cc GDC-alt" title="GDC"></i>
       <i class="cc GEMZ" title="GEMZ"></i>
@@ -236,6 +244,8 @@
       <h2>Q</h2>
       <i class="cc QRK" title="QRK"></i>
       <i class="cc QRK-alt" title="QRK"></i>
+      <i class="cc QTUM" title="QTUM"></i>
+      <i class="cc QTUM-alt" title="QTUM"></i>
 
       <h2>R</h2>
       <i class="cc RADS" title="RADS"></i>
@@ -254,6 +264,8 @@
       <i class="cc RISE-alt" title="RISE"></i>
 
       <h2>S</h2>
+      <i class="cc SALT" title="SALT"></i>
+      <i class="cc SALT-alt" title="SALT"></i>
       <i class="cc SAR" title="SAR"></i>
       <i class="cc SAR-alt" title="SAR"></i>
       <i class="cc SCOT" title="SCOT"></i>
@@ -333,6 +345,8 @@
       <i class="cc XTZ-alt" title="XTZ"></i>
       <i class="cc XVG" title="XVG"></i>
       <i class="cc XVG-alt" title="XVG"></i>
+      <i class="cc XZC" title="XZC"></i>
+      <i class="cc XZC-alt" title="XZC"></i>
 
       <h2>Y</h2>
       <i class="cc YBC" title="YBC"></i>
