pack + fix everything nicely before release

--- a/demo.html
+++ b/demo.html
@@ -176,8 +176,8 @@
       <i class="cc LBC-alt" title="LBC"></i>
       <i class="cc LDOGE" title="LDOGE"></i>
       <i class="cc LDOGE-alt" title="LDOGE"></i>
-      <i class="cc LISK" title="LISK"></i>
-      <i class="cc LISK-alt" title="LISK"></i>
+      <i class="cc LSK" title="LSK"></i>
+      <i class="cc LSK-alt" title="LSK"></i>
       <i class="cc LTC" title="LTC"></i>
       <i class="cc LTC-alt" title="LTC"></i>
 
