Correctly added Viacoin

--- a/demo.html
+++ b/demo.html
@@ -312,6 +312,8 @@
       <i class="cc USDT-alt" title="USDT"></i>
 
       <h2>V</h2>
+       <i class="cc VIA" title="VIA"></i>
+      <i class="cc VIA-alt" title="VIA"></i>
       <i class="cc VIOR" title="VIOR"></i>
       <i class="cc VIOR-alt" title="VIOR"></i>
       <i class="cc VNL" title="VNL"></i>
