Added new coins

--- a/demo.html
+++ b/demo.html
@@ -41,6 +41,7 @@
       <i class="cc ARDR-alt" title="ARDR"></i>
       <i class="cc ARK" title="ARK"></i>
       <i class="cc ARK-alt" title="ARK"></i>
+      <i class="cc AST" title="AST"></i>
       <i class="cc AUR" title="AUR"></i>
       <i class="cc AUR-alt" title="AUR"></i>
 
@@ -56,6 +57,7 @@
       <i class="cc BCN" title="BCN"></i>
       <i class="cc BCN-alt" title="BCN"></i>
       <i class="cc BFT" title="BFT"></i>
+      <i class="cc BLZ" title="BLZ"></i>
       <i class="cc BFT-alt" title="BFT"></i>
       <i class="cc BRK" title="BRK"></i>
       <i class="cc BRK-alt" title="BRK"></i>
@@ -122,6 +124,7 @@
       <i class="cc FRK-alt" title="FRK"></i>
       <i class="cc FTC" title="FTC"></i>
       <i class="cc FTC-alt" title="FTC"></i>
+      <i class="cc FUN" title="FUN"></i>
 
       <h2>G</h2>
       <i class="cc GAME" title="GAME"></i>
@@ -193,10 +196,14 @@
       <i class="cc MRC" title="MRC"></i>
       <i class="cc MSC" title="MSC"></i>
       <i class="cc MSC-alt" title="MSC"></i>
+      <i class="cc MTL" title="MTL"></i>
+      <i class="cc MTL-alt" title="MTL"></i>
       <i class="cc MTR" title="MTR"></i>
       <i class="cc MTR-alt" title="MTR"></i>
       <i class="cc MUE" title="MUE"></i>
       <i class="cc MUE-alt" title="MUE"></i>
+      <i class="cc MYST" title="MYST"></i>
+      <i class="cc MYST-alt" title="MYST"></i>
 
       <h2>N</h2>
       <i class="cc NBT" title="NBT"></i>
@@ -210,6 +217,7 @@
       <i class="cc NLG-alt" title="NLG"></i>
       <i class="cc NMC" title="NMC"></i>
       <i class="cc NMC-alt" title="NMC"></i>
+      <i class="cc NMR" title="NMR"></i>
       <i class="cc NOTE" title="NOTE"></i>
       <i class="cc NOTE-alt" title="NOTE"></i>
       <i class="cc NVC" title="NVC"></i>
@@ -260,6 +268,7 @@
       <i class="cc RDD-alt" title="RDD"></i>
       <i class="cc REP" title="REP"></i>
       <i class="cc REP-alt" title="REP"></i>
+      <i class="cc RHOC" title="RHOC"></i>
       <i class="cc RISE" title="RISE"></i>
       <i class="cc RISE-alt" title="RISE"></i>
 
@@ -357,6 +366,7 @@
       <i class="cc ZEC-alt" title="ZEC"></i>
       <i class="cc ZEIT" title="ZEIT"></i>
       <i class="cc ZEIT-alt" title="ZEIT"></i>
+      <i class="cc ZRX" title="ZRX"></i>
    </div>
 
    <p>
