--- a/demo.html
+++ b/demo.html
@@ -70,6 +70,8 @@
       <i class="cc BCC-alt" title="BCC"></i>
       <i class="cc BTCD" title="BTCD"></i>
       <i class="cc BTCD-alt" title="BTCD"></i>
+      <i class="cc BTCP" title="BTCP"></i>
+      <i class="cc BTCP-alt" title="BTCP"></i>
       <i class="cc BTM" title="BTM"></i>
       <i class="cc BTM-alt" title="BTM"></i>
       <i class="cc BTS" title="BTS"></i>
