BCY, BELA, BURST, CVC, EMC2, EXP, FLDC, HUC, MARKS (BTM), NAV, PASC, RIC, VIA, XBC, XVC, ZRX
Some aliases were added for Bitcoin Cash, Steem, Siacoin, Storj,
Stellar, Gas, and NuBits

--- a/demo.html
+++ b/demo.html
@@ -55,6 +55,8 @@
       <i class="cc BC-alt" title="BC"></i>
       <i class="cc BCN" title="BCN"></i>
       <i class="cc BCN-alt" title="BCN"></i>
+      <i class="cc BCY" title="BCY"></i>
+      <i class="cc BELA" title="BELA"></i>
       <i class="cc BFT" title="BFT"></i>
       <i class="cc BFT-alt" title="BFT"></i>
       <i class="cc BRK" title="BRK"></i>
@@ -74,12 +76,14 @@
       <i class="cc BTM-alt" title="BTM"></i>
       <i class="cc BTS" title="BTS"></i>
       <i class="cc BTS-alt" title="BTS"></i>
+      <i class="cc BURST" title="BURST"></i>
 
       <h2>C</h2>
       <i class="cc CLAM" title="CLAM"></i>
       <i class="cc CLAM-alt" title="CLAM"></i>
       <i class="cc CLOAK" title="CLOAK"></i>
       <i class="cc CLOAK-alt" title="CLOAK"></i>
+      <i class="cc CVC" title="CVC"></i>
 
       <h2>D</h2>
       <i class="cc DAO" title="DAO"></i>
@@ -102,6 +106,7 @@
       <h2>E</h2>
       <i class="cc EMC" title="EMC"></i>
       <i class="cc EMC-alt" title="EMC"></i>
+      <i class="cc EMC2" title="EMC2"></i>
       <i class="cc EOS" title="EOS"></i>
       <i class="cc EOS-alt" title="EOS"></i>
       <i class="cc ERC" title="ERC"></i>
@@ -110,12 +115,14 @@
       <i class="cc ETC-alt" title="ETC"></i>
       <i class="cc ETH" title="ETH"></i>
       <i class="cc ETH-alt" title="ETH"></i>
+      <i class="cc EXP" title="EXP"></i>
 
       <h2>F</h2>
       <i class="cc FC2" title="FC2"></i>
       <i class="cc FC2-alt" title="FC2"></i>
       <i class="cc FCT" title="FCT"></i>
       <i class="cc FCT-alt" title="FCT"></i>
+      <i class="cc FLDC" title="FLDC"></i>
       <i class="cc FLO" title="FLO"></i>
       <i class="cc FLO-alt" title="FLO"></i>
       <i class="cc FRK" title="FRK"></i>
@@ -147,6 +154,7 @@
       <h2>H</h2>
       <i class="cc HEAT" title="HEAT"></i>
       <i class="cc HEAT-alt" title="HEAT"></i>
+      <i class="cc HUC" title="HUC"></i>
 
       <h2>I</h2>
       <i class="cc ICN" title="ICN"></i>
@@ -184,6 +192,7 @@
       <h2>M</h2>
       <i class="cc MAID" title="MAID"></i>
       <i class="cc MAID-alt" title="MAID"></i>
+      <i class="cc MARKS" title="MARKS"></i>
       <i class="cc MCO" title="MCO"></i>
       <i class="cc MCO-alt" title="MCO"></i>
       <i class="cc MINT" title="MINT"></i>
@@ -199,6 +208,7 @@
       <i class="cc MUE-alt" title="MUE"></i>
 
       <h2>N</h2>
+      <i class="cc NAV" title="NAV"></i>
       <i class="cc NBT" title="NBT"></i>
       <i class="cc NEO" title="NEO"></i>
       <i class="cc NEO-alt" title="NEO"></i>
@@ -230,6 +240,7 @@
       <h2>P</h2>
       <i class="cc PART" title="PART"></i>
       <i class="cc PART-alt" title="PART"></i>
+      <i class="cc PASC" title="PASC"></i>
       <i class="cc PIGGY" title="PIGGY"></i>
       <i class="cc PIGGY-alt" title="PIGGY"></i>
       <i class="cc PINK" title="PINK"></i>
@@ -260,6 +271,7 @@
       <i class="cc RDD-alt" title="RDD"></i>
       <i class="cc REP" title="REP"></i>
       <i class="cc REP-alt" title="REP"></i>
+      <i class="cc RIC" title="RIC"></i>
       <i class="cc RISE" title="RISE"></i>
       <i class="cc RISE-alt" title="RISE"></i>
 
@@ -312,6 +324,7 @@
       <i class="cc USDT-alt" title="USDT"></i>
 
       <h2>V</h2>
+      <i class="cc VIA" title="VIA"></i>
       <i class="cc VIOR" title="VIOR"></i>
       <i class="cc VIOR-alt" title="VIOR"></i>
       <i class="cc VNL" title="VNL"></i>
@@ -332,6 +345,7 @@
       <i class="cc XAI-alt" title="XAI"></i>
       <i class="cc XBS" title="XBS"></i>
       <i class="cc XBS-alt" title="XBS"></i>
+      <i class="cc XBC" title="XBC"></i>
       <i class="cc XCP" title="XCP"></i>
       <i class="cc XCP-alt" title="XCP"></i>
       <i class="cc XEM" title="XEM"></i>
@@ -343,6 +357,7 @@
       <i class="cc XRP-alt" title="XRP"></i>
       <i class="cc XTZ" title="XTZ"></i>
       <i class="cc XTZ-alt" title="XTZ"></i>
+      <i class="cc XVC" title="XVC"></i>
       <i class="cc XVG" title="XVG"></i>
       <i class="cc XVG-alt" title="XVG"></i>
       <i class="cc XZC" title="XZC"></i>
@@ -357,6 +372,7 @@
       <i class="cc ZEC-alt" title="ZEC"></i>
       <i class="cc ZEIT" title="ZEIT"></i>
       <i class="cc ZEIT-alt" title="ZEIT"></i>
+      <i class="cc ZRX" title="ZRX"></i>
    </div>
 
    <p>
