--- a/demo.html
+++ b/demo.html
@@ -68,8 +68,8 @@
       <i class="cc BTA" title="BTA"></i>
       <i class="cc BTC" title="BTC"></i>
       <i class="cc BTC-alt" title="BTC"></i>
-      <i class="cc BCC" title="BCC"></i>
-      <i class="cc BCC-alt" title="BCC"></i>
+      <i class="cc BCH" title="BCC"></i>
+      <i class="cc BCH-alt" title="BCC"></i>
       <i class="cc BTCD" title="BTCD"></i>
       <i class="cc BTCD-alt" title="BTCD"></i>
       <i class="cc BTM" title="BTM"></i>
@@ -84,6 +84,7 @@
       <i class="cc CLOAK" title="CLOAK"></i>
       <i class="cc CLOAK-alt" title="CLOAK"></i>
       <i class="cc CVC" title="CVC"></i>
+      <i class="cc CVC-alt" title="CVC"></i>
 
       <h2>D</h2>
       <i class="cc DAO" title="DAO"></i>
@@ -107,6 +108,7 @@
       <i class="cc EMC" title="EMC"></i>
       <i class="cc EMC-alt" title="EMC"></i>
       <i class="cc EMC2" title="EMC2"></i>
+      <i class="cc EMC2-alt" title="EMC2"></i>
       <i class="cc EOS" title="EOS"></i>
       <i class="cc EOS-alt" title="EOS"></i>
       <i class="cc ERC" title="ERC"></i>
@@ -116,6 +118,7 @@
       <i class="cc ETH" title="ETH"></i>
       <i class="cc ETH-alt" title="ETH"></i>
       <i class="cc EXP" title="EXP"></i>
+      <i class="cc EXP-alt" title="EXP"></i>
 
       <h2>F</h2>
       <i class="cc FC2" title="FC2"></i>
@@ -123,6 +126,7 @@
       <i class="cc FCT" title="FCT"></i>
       <i class="cc FCT-alt" title="FCT"></i>
       <i class="cc FLDC" title="FLDC"></i>
+      <i class="cc FLDC-alt" title="FLDC"></i>
       <i class="cc FLO" title="FLO"></i>
       <i class="cc FLO-alt" title="FLO"></i>
       <i class="cc FRK" title="FRK"></i>
@@ -155,6 +159,7 @@
       <i class="cc HEAT" title="HEAT"></i>
       <i class="cc HEAT-alt" title="HEAT"></i>
       <i class="cc HUC" title="HUC"></i>
+      <i class="cc HUC-alt" title="HUC"></i>
 
       <h2>I</h2>
       <i class="cc ICN" title="ICN"></i>
@@ -193,6 +198,7 @@
       <i class="cc MAID" title="MAID"></i>
       <i class="cc MAID-alt" title="MAID"></i>
       <i class="cc MARKS" title="MARKS"></i>
+      <i class="cc MARKS-alt" title="MARKS"></i>
       <i class="cc MCO" title="MCO"></i>
       <i class="cc MCO-alt" title="MCO"></i>
       <i class="cc MINT" title="MINT"></i>
@@ -209,6 +215,7 @@
 
       <h2>N</h2>
       <i class="cc NAV" title="NAV"></i>
+      <i class="cc NAV-alt" title="NAV"></i>
       <i class="cc NBT" title="NBT"></i>
       <i class="cc NEO" title="NEO"></i>
       <i class="cc NEO-alt" title="NEO"></i>
@@ -272,6 +279,7 @@
       <i class="cc REP" title="REP"></i>
       <i class="cc REP-alt" title="REP"></i>
       <i class="cc RIC" title="RIC"></i>
+      <i class="cc RIC-alt" title="RIC"></i>
       <i class="cc RISE" title="RISE"></i>
       <i class="cc RISE-alt" title="RISE"></i>
 
@@ -325,6 +333,7 @@
 
       <h2>V</h2>
       <i class="cc VIA" title="VIA"></i>
+      <i class="cc VIA-alt" title="VIA"></i>
       <i class="cc VIOR" title="VIOR"></i>
       <i class="cc VIOR-alt" title="VIOR"></i>
       <i class="cc VNL" title="VNL"></i>
@@ -358,6 +367,7 @@
       <i class="cc XTZ" title="XTZ"></i>
       <i class="cc XTZ-alt" title="XTZ"></i>
       <i class="cc XVC" title="XVC"></i>
+      <i class="cc XVC-alt" title="XVC"></i>
       <i class="cc XVG" title="XVG"></i>
       <i class="cc XVG-alt" title="XVG"></i>
       <i class="cc XZC" title="XZC"></i>
@@ -373,6 +383,7 @@
       <i class="cc ZEIT" title="ZEIT"></i>
       <i class="cc ZEIT-alt" title="ZEIT"></i>
       <i class="cc ZRX" title="ZRX"></i>
+      <i class="cc ZRX-alt" title="ZRX"></i>
    </div>
 
    <p>
