Stellar STR => XLM update (closes #121)

--- a/demo.html
+++ b/demo.html
@@ -306,8 +306,6 @@
       <i class="cc START-alt" title="START"></i>
       <i class="cc STEEM" title="STEEM"></i>
       <i class="cc STEEM-alt" title="STEEM"></i>
-      <i class="cc STR" title="STR"></i>
-      <i class="cc STR-alt" title="STR"></i>
       <i class="cc STRAT" title="STRAT"></i>
       <i class="cc STRAT-alt" title="STRAT"></i>
       <i class="cc SWIFT" title="SWIFT"></i>
@@ -359,6 +357,8 @@
       <i class="cc XCP-alt" title="XCP"></i>
       <i class="cc XEM" title="XEM"></i>
       <i class="cc XEM-alt" title="XEM"></i>
+      <i class="cc XLM" title="XLM"></i>
+      <i class="cc XLM-alt" title="XLM"></i>
       <i class="cc XMR" title="XMR"></i>
       <i class="cc XPM" title="XPM"></i>
       <i class="cc XPM-alt" title="XPM"></i>
