--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="webfont/cryptocoins.css">
 
    <!-- CSS defining icon/coin colors (optional) -->
-   <!--link rel="stylesheet" href="webfont/cryptocoins-colors.css"-->
+   <link rel="stylesheet" href="webfont/cryptocoins-colors.css">
 
 </head>
 <body>
@@ -59,6 +59,10 @@
       <i class="cc BCY" title="BCY"></i>
       <i class="cc BELA" title="BELA"></i>
       <i class="cc BFT" title="BFT"></i>
+      <i class="cc BLOCK" title="BLOCK"></i>
+      <i class="cc BLOCK-alt" title="BLOCK"></i>
+      <i class="cc BNT" title="BNT"></i>
+      <i class="cc BNT-alt" title="BNT"></i>
       <i class="cc BLZ" title="BLZ"></i>
       <i class="cc BFT-alt" title="BFT"></i>
       <i class="cc BRK" title="BRK"></i>
@@ -70,6 +74,8 @@
       <i class="cc BTA" title="BTA"></i>
       <i class="cc BTC" title="BTC"></i>
       <i class="cc BTC-alt" title="BTC"></i>
+      <i class="cc BTG" title="BTG"></i>
+      <i class="cc BTG-alt" title="BTG"></i>
       <i class="cc BCH" title="BCC"></i>
       <i class="cc BCH-alt" title="BCC"></i>
       <i class="cc BTCD" title="BTCD"></i>
@@ -105,14 +111,22 @@
       <i class="cc DGX" title="DGX"></i>
       <i class="cc DMD" title="DMD"></i>
       <i class="cc DMD-alt" title="DMD"></i>
+      <i class="cc DNT" title="DNT"></i>
+      <i class="cc DNT-alt" title="DNT"></i>
       <i class="cc DOGE" title="DOGE"></i>
       <i class="cc DOGE-alt" title="DOGE"></i>
 
       <h2>E</h2>
+      <i class="cc EBST" title="EBST"></i>
+      <i class="cc EBST-alt" title="EBST"></i>
+      <i class="cc EDG" title="EDG"></i>
+      <i class="cc EDG-alt" title="EDG"></i>
       <i class="cc EMC" title="EMC"></i>
       <i class="cc EMC-alt" title="EMC"></i>
       <i class="cc EMC2" title="EMC2"></i>
       <i class="cc EMC2-alt" title="EMC2"></i>
+      <i class="cc ENG" title="ENG"></i>
+      <i class="cc ENG-alt" title="ENG"></i>
       <i class="cc EOS" title="EOS"></i>
       <i class="cc EOS-alt" title="EOS"></i>
       <i class="cc ERC" title="ERC"></i>
@@ -121,6 +135,8 @@
       <i class="cc ETC-alt" title="ETC"></i>
       <i class="cc ETH" title="ETH"></i>
       <i class="cc ETH-alt" title="ETH"></i>
+      <i class="cc ETN" title="ETN"></i>
+      <i class="cc ETN-alt" title="ETN"></i>
       <i class="cc EXP" title="EXP"></i>
       <i class="cc EXP-alt" title="EXP"></i>
 
@@ -156,9 +172,13 @@
       <i class="cc GNT-alt" title="GNT"></i>
       <i class="cc GOLOS" title="GOLOS"></i>
       <i class="cc GOLOS-alt" title="GOLOS"></i>
+      <i class="cc GTO" title="GTO"></i>
+      <i class="cc GTO-alt" title="GTO"></i>
       <i class="cc GRC" title="GRC"></i>
       <i class="cc GRC-alt" title="GRC"></i>
       <i class="cc GRS" title="GRS"></i>
+      <i class="cc GUP" title="GUP"></i>
+      <i class="cc GUP-alt" title="GUP"></i>
 
       <h2>H</h2>
       <i class="cc HEAT" title="HEAT"></i>
@@ -171,10 +191,16 @@
       <i class="cc ICN-alt" title="ICN"></i>
       <i class="cc IFC" title="IFC"></i>
       <i class="cc IFC-alt" title="IFC"></i>
+      <i class="cc IGNIS" title="IGNIS"></i>
+      <i class="cc IGNIS-alt" title="IGNIS"></i>
       <i class="cc INCNT" title="INCNT"></i>
       <i class="cc INCNT-alt" title="INCNT"></i>
       <i class="cc IOC" title="IOC"></i>
       <i class="cc IOC-alt" title="IOC"></i>
+      <i class="cc ION" title="ION"></i>
+      <i class="cc ION-alt" title="ION"></i>
+      <i class="cc IOP" title="IOP"></i>
+      <i class="cc IOP-alt" title="IOP"></i>
       <i class="cc IOTA" title="IOTA"></i>
       <i class="cc IOTA-alt" title="IOTA"></i>
 
@@ -198,16 +224,25 @@
       <i class="cc LSK-alt" title="LSK"></i>
       <i class="cc LTC" title="LTC"></i>
       <i class="cc LTC-alt" title="LTC"></i>
+      <i class="cc LRC" title="LRC"></i>
+      <i class="cc LRC-alt" title="LRC"></i>
+      <i class="cc LUN" title="LUN"></i>
+      <i class="cc LUN-alt" title="LUN"></i>
 
       <h2>M</h2>
       <i class="cc MAID" title="MAID"></i>
       <i class="cc MAID-alt" title="MAID"></i>
+      <i class="cc MANA" title="MANA"></i>
+      <i class="cc MANA-alt" title="MANA"></i>
       <i class="cc MARKS" title="MARKS"></i>
       <i class="cc MARKS-alt" title="MARKS"></i>
       <i class="cc MCO" title="MCO"></i>
       <i class="cc MCO-alt" title="MCO"></i>
       <i class="cc MINT" title="MINT"></i>
       <i class="cc MINT-alt" title="MINT"></i>
+      <i class="cc MLN-alt" title="MLN"></i>
+      <i class="cc MLN" title="MLN"></i>
+      <i class="cc MTR-alt" title="MTR"></i>
       <i class="cc MONA" title="MONA"></i>
       <i class="cc MONA-alt" title="MONA"></i>
       <i class="cc MRC" title="MRC"></i>
@@ -223,6 +258,8 @@
       <i class="cc MYST-alt" title="MYST"></i>
 
       <h2>N</h2>
+      <i class="cc NANO" title="NANO"></i>
+      <i class="cc NANO-alt" title="NANO"></i>
       <i class="cc NAV" title="NAV"></i>
       <i class="cc NAV-alt" title="NAV"></i>
       <i class="cc NBT" title="NBT"></i>
@@ -232,6 +269,10 @@
       <i class="cc NEOS-alt" title="NEOS"></i>
       <i class="cc NEU" title="NEU"></i>
       <i class="cc NEU-alt" title="NEU"></i>
+      <i class="cc NGC-alt" title="NGC"></i>
+      <i class="cc NGC" title="NGC"></i>
+      <i class="cc NLC2" title="NLC2"></i>
+      <i class="cc NLC2-alt" title="NLC2"></i>
       <i class="cc NLG" title="NLG"></i>
       <i class="cc NLG-alt" title="NLG"></i>
       <i class="cc NMC" title="NMC"></i>
@@ -266,22 +307,34 @@
       <i class="cc PIVX-alt" title="PIVX"></i>
       <i class="cc POT" title="POT"></i>
       <i class="cc POT-alt" title="POT"></i>
+      <i class="cc POLY" title="POLY"></i>
+      <i class="cc POLY-alt" title="POLY"></i>
+      <i class="cc POWR" title="POWR"></i>
+      <i class="cc POWR-alt" title="POWR"></i>
       <i class="cc PPC" title="PPC"></i>
       <i class="cc PPC-alt" title="PPC"></i>
+      <i class="cc PPT" title="PPT"></i>
+      <i class="cc PPT-alt" title="PPT"></i>
 
       <h2>Q</h2>
       <i class="cc QRK" title="QRK"></i>
       <i class="cc QRK-alt" title="QRK"></i>
+      <i class="cc QRL" title="QRL"></i>
+      <i class="cc QRL-alt" title="QRL"></i>
       <i class="cc QTUM" title="QTUM"></i>
       <i class="cc QTUM-alt" title="QTUM"></i>
 
       <h2>R</h2>
       <i class="cc RADS" title="RADS"></i>
       <i class="cc RADS-alt" title="RADS"></i>
+      <i class="cc REQ" title="REQ"></i>
+      <i class="cc REQ-alt" title="REQ"></i>
       <i class="cc RBIES" title="RBIES"></i>
       <i class="cc RBIES-alt" title="RBIES"></i>
       <i class="cc RBT" title="RBT"></i>
       <i class="cc RBT-alt" title="RBT"></i>
+      <i class="cc RCN" title="RCN"></i>
+      <i class="cc RCN-alt" title="RCN"></i>
       <i class="cc RBY" title="RBY"></i>
       <i class="cc RBY-alt" title="RBY"></i>
       <i class="cc RDD" title="RDD"></i>
@@ -313,10 +366,16 @@
       <i class="cc SLS-alt" title="SLS"></i>
       <i class="cc SNRG" title="SNRG"></i>
       <i class="cc SNRG-alt" title="SNRG"></i>
+      <i class="cc SNT" title="SNT"></i>
+      <i class="cc SNT-alt" title="SNT"></i>
+      <i class="cc SRN" title="SRN"></i>
+      <i class="cc SRN-alt" title="SRN"></i>
       <i class="cc START" title="START"></i>
       <i class="cc START-alt" title="START"></i>
       <i class="cc STEEM" title="STEEM"></i>
       <i class="cc STEEM-alt" title="STEEM"></i>
+      <i class="cc STORM" title="STORM"></i>
+      <i class="cc STORM-alt" title="STORM"></i>
       <i class="cc STRAT" title="STRAT"></i>
       <i class="cc STRAT-alt" title="STRAT"></i>
       <i class="cc SWIFT" title="SWIFT"></i>
@@ -329,6 +388,8 @@
       <h2>T</h2>
       <i class="cc TRIG" title="TRIG"></i>
       <i class="cc TRIG-alt" title="TRIG"></i>
+      <i class="cc TRX" title="TRX"></i>
+      <i class="cc TRX-alt" title="TRX"></i>
       <i class="cc TX" title="TX"></i>
       <i class="cc TX-alt" title="TX"></i>
 
@@ -343,6 +404,8 @@
       <h2>V</h2>
       <i class="cc VIA" title="VIA"></i>
       <i class="cc VIA-alt" title="VIA"></i>
+      <i class="cc VIB" title="VIB"></i>
+      <i class="cc VIB-alt" title="VIB"></i>
       <i class="cc VIOR" title="VIOR"></i>
       <i class="cc VIOR-alt" title="VIOR"></i>
       <i class="cc VNL" title="VNL"></i>
@@ -357,6 +420,10 @@
       <h2>W</h2>
       <i class="cc WAVES" title="WAVES"></i>
       <i class="cc WAVES-alt" title="WAVES"></i>
+      <i class="cc WAX" title="WAX"></i>
+      <i class="cc WAX-alt" title="WAX"></i>
+      <i class="cc WINGS" title="WINGS"></i>
+      <i class="cc WINGS-alt" title="WINGS"></i>
 
       <h2>X</h2>
       <i class="cc XAI" title="XAI"></i>
@@ -366,12 +433,17 @@
       <i class="cc XBC" title="XBC"></i>
       <i class="cc XCP" title="XCP"></i>
       <i class="cc XCP-alt" title="XCP"></i>
+      <i class="cc XDN" title="XDN"></i>
+      <i class="cc XDN-alt" title="XDN"></i>
       <i class="cc XEM" title="XEM"></i>
       <i class="cc XEM-alt" title="XEM"></i>
       <i class="cc XLM" title="XLM"></i>
       <i class="cc XLM-alt" title="XLM"></i>
       <i class="cc XMR" title="XMR"></i>
+      <i class="cc XMG" title="XMG"></i>
+      <i class="cc XMG-alt" title="XMG"></i>
       <i class="cc XMY" title="XMY"></i>
+      <i class="cc XMY-alt" title="XMY"></i>
       <i class="cc XPM" title="XPM"></i>
       <i class="cc XPM-alt" title="XPM"></i>
       <i class="cc XRP" title="XRP"></i>
@@ -390,8 +462,12 @@
       <i class="cc YBC-alt" title="YBC"></i>
 
       <h2>Z</h2>
+      <i class="cc ZCL" title="ZCL"></i>
+      <i class="cc ZCL-alt" title="ZCL"></i>
       <i class="cc ZEC" title="ZEC"></i>
       <i class="cc ZEC-alt" title="ZEC"></i>
+      <i class="cc ZEN" title="ZEN"></i>
+      <i class="cc ZEN-alt" title="ZEN"></i>
       <i class="cc ZEIT" title="ZEIT"></i>
       <i class="cc ZEIT-alt" title="ZEIT"></i>
       <i class="cc ZRX" title="ZRX"></i>
