SNAX token added

--- a/demo.html
+++ b/demo.html
@@ -311,6 +311,8 @@
       <i class="cc SLG-alt" title="SLG"></i>
       <i class="cc SLS" title="SLS"></i>
       <i class="cc SLS-alt" title="SLS"></i>
+      <i class="cc SNAX" title="SNAX"></i>
+      <i class="cc SNAX-alt" title="SNAX"></i>
       <i class="cc SNRG" title="SNRG"></i>
       <i class="cc SNRG-alt" title="SNRG"></i>
       <i class="cc START" title="START"></i>
