updated demo & readme

--- a/demo.html
+++ b/demo.html
@@ -59,8 +59,9 @@
       <i class="cc BCY" title="BCY"></i>
       <i class="cc BELA" title="BELA"></i>
       <i class="cc BFT" title="BFT"></i>
-      <i class="cc BLZ" title="BLZ"></i>
       <i class="cc BFT-alt" title="BFT"></i>
+      <i class="cc BNB" title="BNB"></i><!--span class="name">Binance Coin (BNB)</span-->
+      <i class="cc BLZ" title="BLZ"></i>
       <i class="cc BRK" title="BRK"></i>
       <i class="cc BRK-alt" title="BRK"></i>
       <i class="cc BRX" title="BRX"></i>
@@ -70,6 +71,7 @@
       <i class="cc BTA" title="BTA"></i>
       <i class="cc BTC" title="BTC"></i>
       <i class="cc BTC-alt" title="BTC"></i>
+      <i class="cc BTG" title="BTG"></i><!--span class="name">Bitcoin Gold (BTG)</span-->
       <i class="cc BCH" title="BCC"></i>
       <i class="cc BCH-alt" title="BCC"></i>
       <i class="cc BTCD" title="BTCD"></i>
@@ -163,12 +165,14 @@
       <h2>H</h2>
       <i class="cc HEAT" title="HEAT"></i>
       <i class="cc HEAT-alt" title="HEAT"></i>
+      <i class="cc HSR" title="HSR"></i><!--span class="name">HShare (HSR)</span-->
       <i class="cc HUC" title="HUC"></i>
       <i class="cc HUC-alt" title="HUC"></i>
 
       <h2>I</h2>
       <i class="cc ICN" title="ICN"></i>
       <i class="cc ICN-alt" title="ICN"></i>
+      <i class="cc ICX" title="ICX"></i><!--span class="name">ICON (ICX)</span-->
       <i class="cc IFC" title="IFC"></i>
       <i class="cc IFC-alt" title="IFC"></i>
       <i class="cc INCNT" title="INCNT"></i>
@@ -264,6 +268,7 @@
       <i class="cc PINK-alt" title="PINK"></i>
       <i class="cc PIVX" title="PIVX"></i>
       <i class="cc PIVX-alt" title="PIVX"></i>
+      <i class="cc PPT" title="PPT"></i><!--span class="name">Populous (PPT)</span-->
       <i class="cc POT" title="POT"></i>
       <i class="cc POT-alt" title="POT"></i>
       <i class="cc PPC" title="PPC"></i>
@@ -313,6 +318,7 @@
       <i class="cc SLS-alt" title="SLS"></i>
       <i class="cc SNRG" title="SNRG"></i>
       <i class="cc SNRG-alt" title="SNRG"></i>
+      <i class="cc SNT" title="SNT"></i><!--span class="name">Status (SNT)</span-->
       <i class="cc START" title="START"></i>
       <i class="cc START-alt" title="START"></i>
       <i class="cc STEEM" title="STEEM"></i>
@@ -329,6 +335,7 @@
       <h2>T</h2>
       <i class="cc TRIG" title="TRIG"></i>
       <i class="cc TRIG-alt" title="TRIG"></i>
+      <i class="cc TRX" title="TRX"></i><!--span class="name">TRON (TRX)</span-->
       <i class="cc TX" title="TX"></i>
       <i class="cc TX-alt" title="TX"></i>
 
@@ -341,6 +348,8 @@
       <i class="cc USDT-alt" title="USDT"></i>
 
       <h2>V</h2>
+      <i class="cc VERI" title="VERI"></i><!--span class="name">Veritaseum (VERI)</span-->
+      <i class="cc VET" title="VET"></i><!--span class="name">VeChain (VET)</span-->
       <i class="cc VIA" title="VIA"></i>
       <i class="cc VIA-alt" title="VIA"></i>
       <i class="cc VIOR" title="VIOR"></i>
