--- a/icons-demo.html
+++ b/icons-demo.html
@@ -5,7 +5,7 @@
    <title>Cryptocoins Webfont Demo</title>
    
    <!-- CSS defining icons (required) -->
-   <link rel="stylesheet" href="../webfont/cryptocoins.css">
+   <link rel="stylesheet" href="webfont/cryptocoins.css">
 
    <!-- CSS defining icon/coin colors (optional) -->
    <!--link rel="stylesheet" href="webfont/cryptocoins-colors.css"-->
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<h1>Demo</h1>
+<h1><a href="README.md">Cryptocoins</a> Demo</h1>
 
 <p>Overview of all included coins/icons.</p>
 <p>Check the HTML if you're not sure how to include the icons to your project.</p>
@@ -403,12 +403,34 @@
    <i class="cc ZRX-alt" title="ZRX"></i>
 </div>
 
+
 <style>
-   .icons {
-      margin: 3rem 0;
-   }
-   i.cc { font-size: 4rem; display: inline-block; margin: 0 1.3rem 1.3rem 0; transition: 0.1s ease all; }
-   i.cc:hover { color: #0060BD; transform: rotate(-20deg); transform-origin: 0.49em 0.7em; }
+  body {
+    font-family: "Inter UI", "Helvetica", "Arial", sans-serif;
+    width: 100%;
+    max-width: 72rem;
+    padding: 1rem 2rem;
+    margin: 0 auto; }
+  a {
+    color: #0060BD; }
+  a:hover {
+    text-decoration: none; }
+  code {
+    color: #0060BD;
+    background: #deefff;
+    padding: 2px 5px;
+    border-radius: 4px; }
+  .icons {
+    margin: 3rem 0; }
+  i.cc {
+    font-size: 4rem;
+    display: inline-block;
+    margin: 0 1.3rem 1.3rem 0;
+    transition: 0.1s ease all; }
+  i.cc:hover {
+    color: #0060BD;
+    transform: rotate(-20deg);
+    transform-origin: 0.49em 0.55em; }
 </style>
 
 </body>
