--- a/icons-demo.html
+++ b/icons-demo.html
@@ -9,11 +9,10 @@
 
    <!-- CSS defining icon/coin colors (optional) -->
    <!--link rel="stylesheet" href="webfont/cryptocoins-colors.css"-->
-
 </head>
 <body>
 
-<h1><a href="README.md">Cryptocoins</a> Demo</h1>
+<h1><a href="https://allienworks.github.io/cryptocoins/">Cryptocoins</a> Demo</h1>
 
 <p>Overview of all included coins/icons.</p>
 <p>Check the HTML if you're not sure how to include the icons to your project.</p>
