--- a/icons-demo.html
+++ b/icons-demo.html
@@ -24,6 +24,8 @@
    <i class="cc ADA-alt" title="ADA"></i>
    <i class="cc ADC" title="ADC"></i>
    <i class="cc ADC-alt" title="ADC"></i>
+   <i class="cc ALGO" title="ALGO"></i>
+   <i class="cc ALGO-alt" title="ALGO"></i>
    <i class="cc AEON" title="AEON"></i>
    <i class="cc AEON-alt" title="AEON"></i>
    <i class="cc AMP" title="AMP"></i>
