add blockstack stx icon

--- a/icons-demo.html
+++ b/icons-demo.html
@@ -320,6 +320,7 @@
    <i class="cc STEEM-alt" title="STEEM"></i>
    <i class="cc STRAT" title="STRAT"></i>
    <i class="cc STRAT-alt" title="STRAT"></i>
+   <i class="cc STX" title="STX"></i>
    <i class="cc SWIFT" title="SWIFT"></i>
    <i class="cc SWIFT-alt" title="SWIFT"></i>
    <i class="cc SYNC" title="SYNC"></i>
